# DemoApp/models/dto_models/ArticleDto.py
@@ -1,0 +1,10 @@
+# -*- coding: UTF-8 -*-
+class ArticleDto():
+    """
+        文章类传输对象
+    """
+    def __init__(self):
+        # 标题
+        self.Title = ''
+        # 内容
+        self.Content = ''
