# DemoApp/models/dto_models/__init__.py
@@ -1,2 +1,3 @@
 # -*- coding: UTF-8 -*-
 from .UserDto import UserDto
+from .ArticleDto import ArticleDto
